# django_learn

./: README.md  pyproject.toml
firstproject/firstapp/: urls.py  views.py
firstproject/firstapp/migrations/: 0001_initial.py  0002_reservation.py
firstproject/firstproject/: settings.py  urls.py
learn_ecommerce/: manage.py
learn_ecommerce/learn_ecommerce/: asgi.py  settings.py  urls.py  wsgi.py
