[project]
name = "django-learn"
version = "0.1.0"
description = "project to learn about the framework Django"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.1",
    "django-cors-headers>=4.7.0",
    "django-rest-framework>=0.1.0",
    "djoser>=2.3.1",
    "mysqlclient>=2.2.7",
]

[tool.ruff.format]
quote-style = "single"
